# gtest-for-rust-lib

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
rustlib/: demo.rs  sample.c
tests/: test_death.cpp  test_rust.cpp  test_sanity.cpp
